# CppExecuter

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/CppManager/: CppManager.cpp  CppManager.hpp
src/FileExecuter/: FileExecuter.cpp  FileExecuter.hpp
src/clipboard/: Clipboard.cpp  Clipboard.hpp
